--- a/themes/geogoe/resources/src/scss/app.scss
+++ b/themes/geogoe/resources/src/scss/app.scss
@@ -1,15 +1,20 @@
-
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: border-box;
 }
-body{
+
+body {
     padding: 0;
     margin: 0;
+    font-size: 14px;
+    overflow-x: hidden;
 }
 
 figure {
     margin: 0;
     text-align: center;
+
     a {
         display: block;
     }
@@ -20,16 +25,21 @@ figure {
     }
 }
 
-input{
+input {
     outline: 0;
 }
 
-h1, .h1, h2, .h2, h3, .h3{
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3 {
     margin-top: 20px;
     margin-bottom: 10px;
 }
 
-p{
+p {
     margin: 0;
 }
 
@@ -57,11 +67,14 @@ p{
     flex-wrap: wrap;
 }
 
-.btn{
+.w-100 {
+    width: 100%;
+}
+
+.btn {
     display: inline-block;
-    padding: 6px 12px;
+    padding: 3px 8px;
     margin-bottom: 0;
-    font-size: 14px;
     font-weight: normal;
     line-height: 1.42857143;
     text-align: center;
@@ -75,14 +88,16 @@ p{
     user-select: none;
     background-image: none;
     border: 1px solid transparent;
+    @media screen and (min-width: 769px) {
+        padding: 6px 12px;
+    }
 }
 
-.form-control{
+.form-control {
     display: block;
     width: 100%;
-    height: 34px;
-    padding: 6px 12px;
-    font-size: 14px;
+    height: 28px;
+    padding: 3px 8px;
     line-height: 1.42857143;
     color: #555;
     background-color: #fff;
@@ -90,7 +105,13 @@ p{
     border: 1px solid #ccc;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-    &:focus{
+
+    @media screen and (min-width: 769px) {
+        padding: 6px 12px;
+        height: 34px;
+    }
+
+    &:focus {
         box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
     }
 }
@@ -98,57 +119,160 @@ p{
 header {
     nav {
         background-color: #77513a;
+
         padding: {
             top: 12px;
             bottom: 12px;
         }
-        figure{
-            img{
+
+        figure {
+            @media screen and (max-width: 768px) {
+                width: 100%;
+                margin-bottom: 15px;
+            }
+
+            img {
                 height: 26px;
             }
         }
-        form{
-            .d-flex{
+
+        form {
+            @media screen and (max-width: 768px) {
+                width: 100%;
+            }
+
+            .d-flex {
                 align-items: stretch;
+                flex-wrap: nowrap;
             }
-            .form-control{
-                width: 196px;
+
+            .bp5-form-group {
+                flex-grow: 4;
             }
-            .btn{
-                background: rgba(127,88,59,0.89);
+
+            .btn {
+                background: rgba(127, 88, 59, 0.89);
                 color: #ffffff;
                 border-color: #aa8a76;
+                flex-grow: 2;
             }
         }
     }
-    .d-flex{
+
+    .d-flex {
         align-items: center;
         justify-content: space-between;
     }
 }
 
-main{
-    margin-top: 40px;
-    #block-01{
-        > .container{
-            > figure{
+main {
+    margin: {
+        top: 20px;
+        bottom: 40px;
+    }
+
+    @media screen and (min-width: 769px) {
+        margin: {
+            top: 40px;
+            bottom: 80px;
+        }
+    }
+
+    #block-01 {
+        >.container {
+            >figure {
                 img {
                     width: 555px;
                 }
             }
-            .d-flex{
+
+            .d-flex {
                 justify-content: space-between;
+
                 >div {
-                    width: calc(100% - 255px - 30px);
-                    h3, p{
-                        font-size: 24px;
+                    width: 100%;
+
+                    @media screen and (min-width: 769px) {
+                        width: calc(100% - 270px - 30px);
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        margin-bottom: 30px;
+                    }
+
+                    h3,
+                    p {
+                        font-size: 20px;
                         color: rgb(0, 90, 158);
+
+                        @media screen and (min-width: 769px) {
+                            font-size: 24px;
+
+                        }
                     }
                 }
-                >form{
-                    width: 255px;
+
+                >form {
+                    width: 100%;
+
+                    @media screen and (min-width: 769px) {
+                        width: 270px;
+                    }
+
+                    >h3 {
+                        text-align: center;
+                        font-size: 24px;
+                        font-weight: 400;
+                        margin-top: 0;
+                    }
+
+                    >.bp5-form-group:not(:last-child) {
+                        margin-bottom: 10px;
+                        @media screen and (min-width: 769px) {
+                            margin-bottom: 15px;
+                        }
+                    }
                 }
             }
+        }
+    }
+}
+
+footer {
+    .footer__copyright {
+        color: #77513a;
+        padding: 0 15px;
+        margin-bottom: 20px;
+
+        @media screen and (min-width: 769px) {
+            margin-bottom: 40px;
+        }
+
+        hr {
+            margin: {
+                top: 10px;
+                bottom: 10px;
+            }
+
+            border: 0;
+            border-top: 1px solid #eee;
+
+            @media screen and (min-width: 769px) {
+                margin: {
+                    top: 20px;
+                    bottom: 20px;
+                }
+            }
+        }
+    }
+
+    .footer__blank {
+        color: #ffffff;
+        background-color: #77513a;
+        min-height: 20px;
+
+        @media screen and (min-width: 769px) {
+            min-height: 40px;
         }
     }
 }
